added pega base test